<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="346dp"
        android:layout_height="82dp"
        android:text="@string/confrim_your_identity"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="347dp"
        android:layout_height="138dp"
        android:gravity="left"
        android:text="@string/we_ll_send_you_a_one_time_code_to_confirm_your_identity_for_your_security_your_password_expires_when_you_get_your_code"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.025" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="112dp"
        android:layout_height="42dp"
        android:layout_marginEnd="32dp"
        android:text="@string/radiobutton"
        app:layout_constraintBottom_toTopOf="@+id/radioButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.107" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="112dp"
        android:layout_height="40dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="104dp"
        android:text="@string/text_message_xxx_xx_xxxx"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="164dp"
        android:layout_height="77dp"
        android:layout_marginTop="24dp"
        android:text="Text Message xxx-xxx-xxxx"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toStartOf="@+id/radioButton"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.55" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="165dp"
        android:layout_height="72dp"
        android:layout_marginBottom="64dp"
        android:text="@string/phone_call_xxx_xxx_xxxx"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/radioButton2"
        app:layout_constraintHorizontal_bias="0.292"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="350dp"
        android:layout_height="54dp"
        android:layout_marginBottom="120dp"
        android:onClick="buttonClick4"
        android:text="get a code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>